syntax = "proto3";

package im.repo.v1;

import "common/v1/types.proto";

option go_package = "github.com/ceyewan/gochat/api/gen/im_repo/v1;imrepov1";

service ConversationService {
  // 获取优化的会话列表
  rpc GetUserConversationsWithDetails(GetUserConversationsWithDetailsRequest) returns (GetUserConversationsWithDetailsResponse);
  // ... 其他 RPC
}

message GetUserConversationsWithDetailsRequest {
  string user_id = 1;
  common.v1.Pagination pagination = 2;
}

message GetUserConversationsWithDetailsResponse {
  repeated common.v1.Conversation conversations = 1;
  common.v1.Pagination pagination = 2;
}
